--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint -- --fix"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
@@ -19,7 +20,8 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
     "lucide-react": "^0.265.0",
-    "next": "13.4.13",
+    "next": "13.4.12",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,7 +33,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
-    "prettier": "^3.0.1",
-    "prettier-plugin-tailwindcss": "^0.5.2"
+    "prettier": "^3.0.2",
+    "prettier-plugin-tailwindcss": "^0.5.3"
   }
 }
